Add option to LDFLAGS to export LUA functions
Add -E option to LDFLAGS to load dinamically modules
at runtime. The modules need LUA function that must
be exported.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -125,6 +125,8 @@ endif
 # lua
 ifneq ($(CONFIG_LUA),)
 CFLAGS += -I$(srctree)/lua
+LDLIBS += dl
+LDFLAGS += -Wl,-E
 endif
 # mongoose webserver
 ifneq ($(CONFIG_MONGOOSE),)
