Switched to external LUA library
All LUA sources were integrated in the project.
The patch switches to a prebuilt LUA library, allowing
to easy update to newer versions of the interpreter.

Please consider that LUA is generally provided
as static library and must be linked first
during the final linker process.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Config.in
+++ b/Config.in
@@ -42,6 +42,12 @@ config HW_COMPATIBILITY_FILE
 	  The file has simple entries (one per line) in the
 	  format of "major.minor".
 
+config LUA
+	bool "lua"
+	default y
+	help
+	  Enable LUA interpreter.
+
 # These are auto-selected by other options
 
 config FEATURE_SYSLOG
@@ -174,4 +180,3 @@ source mongoose/Config.in
 source archival/Config.in
 source parser/Config.in
 source handlers/Config.in
-source lua/Config.in
