Drop compiler defines not used anymore.
Moving to LUA package, it is not necessary anymore
to set -D options to compile LUA.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -138,7 +138,7 @@ else
 CFLAGS += -DNO_SSL
 endif
 ifneq ($(CONFIG_MONGOOSELUA),)
-CFLAGS += -DLUA_COMPAT_ALL -DLUA_USE_LINUX -DUSE_LUA
+CFLAGS += -DUSE_LUA
 LDLIBS += dl
 endif
 ifneq ($(CONFIG_MONGOOSESQL),)
