Add optional basic image downloading support
Uses libcurl to provide support for as many protocols are compiled into
the local libcurl. Currently the image is downloaded completely before
starting installation; future improvements would involve streaming the
download.

Signed-off-by: Mike Williams <mike@mikebwilliams.com>

--- a/Config.in
+++ b/Config.in
@@ -169,6 +169,13 @@ endmenu
 
 endmenu
 
+config DOWNLOAD
+	bool "Enable image downloading"
+	default n
+	help
+	  Enable update from image URL using libcurl. Files are downloaded
+	  completely before installation begins.
+
 config WEBSERVER
 	bool "Enable webserver"
 	default n
