Build failure if CONFIG_MONGOOSE is not set
Enabling the Webserver feature, but without enabling
the internal webserver, the build fails
(libpthread is not linked).

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -134,8 +134,8 @@ ifeq ($(CONFIG_LIBCONFIG),y)
 LDLIBS += config
 endif
 
-# mongoose webserver
-ifneq ($(CONFIG_MONGOOSE),)
+# mongoose / webserver
+ifneq ($(CONFIG_WEBSERVER),)
 LDLIBS += pthread crypto
 ifneq ($(CONFIG_MONGOOSESSL),)
 CFLAGS += -DNO_SSL_DL
