Fix build when Webserver is not set
commit d7753be4fd8bdf2ba4ba56ee869550663b2cca80 adds
server mode, but breaks build if the Webserver is not set.

Reported-by: Jörg Krause <joerg.krause@embedded.rocks>
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -106,6 +106,8 @@ CFLAGS += --sysroot=$(CONFIG_SYSROOT)
 export SYSROOT=$(CONFIG_SYSROOT)
 endif
 
+# Links always pthread
+LDLIBS += pthread crypto
 # lua
 ifneq ($(CONFIG_LUA),)
 LDLIBS += lua dl
@@ -136,7 +138,6 @@ endif
 
 # mongoose / webserver
 ifneq ($(CONFIG_WEBSERVER),)
-LDLIBS += pthread crypto
 ifneq ($(CONFIG_MONGOOSESSL),)
 CFLAGS += -DNO_SSL_DL
 LDLIBS += ssl
