build: conditional MTD support
Allow for disabling MTD support. This allows to shave off a couple of
kBs when building for target that does not have any MTD devices.

Signed-off-by: Maciej Borzecki <maciej.borzecki@open-rnd.pl>

--- a/Config.in
+++ b/Config.in
@@ -42,6 +42,12 @@ config HW_COMPATIBILITY_FILE
 	  The file has simple entries (one per line) in the
 	  format of "major.minor".
 
+config MTD
+	bool "MTD support"
+	default y
+	help
+	  Enable MTD support.
+
 config LUA
 	bool "lua"
 	default y
