--- a/Makefile.flags
+++ b/Makefile.flags
@@ -166,8 +166,9 @@ ifeq ($(CONFIG_MTD),y)
 LDLIBS += ubi mtd
 endif
 
+ifeq ($(CONFIG_GUNZIP),y)
 LDLIBS += z
-
+endif
 
 # If a flat binary should be built, CFLAGS_swupdate="-elf2flt"
 # env var should be set for make invocation.
