Remove superfluous Busybox' parameters from CPPFLAGS
Signed-off-by: Jörg Krause <joerg.krause@embedded.rocks>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -11,11 +11,11 @@ CPPFLAGS += $(call cc-option,-std=gnu99,)
 
 CPPFLAGS += \
 	-Iinclude \
-	$(if $(KBUILD_SRC),-Iinclude2 -I$(srctree)/include -I$(srctree)/libbb) \
+	$(if $(KBUILD_SRC),-I$(srctree)/include) \
 	-include include/autoconf.h \
 	-D_GNU_SOURCE -DNDEBUG \
 	$(if $(CONFIG_LFS),-D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64) \
-	-D"SWU_VER=KBUILD_STR($(SWU_VER))" -DBB_BT=AUTOCONF_TIMESTAMP
+	-D"SWU_VER=KBUILD_STR($(SWU_VER))"
 
 CFLAGS += $(call cc-option,-Wall,)
 CFLAGS += $(call cc-option,-Wshadow,)
