libm must be linked if LUA is set
Commit 4d86de3432205e1899e7672ffeeae9bf8f802786 links
libm only if CONFIG_MONGOOSESQL. However, this enables
LUA, that is the main reason to link libm.

Link libm if LUA is set.

Signed-off-by: Stefano Babic <sbabic@denx.de>
Tested-by: Jörg Krause <joerg.krause@embedded.rocks>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -100,7 +100,7 @@ endif
 LDLIBS += pthread
 # lua
 ifneq ($(CONFIG_LUA),)
-LDLIBS += lua dl
+LDLIBS += lua dl m
 LDFLAGS += -Wl,-E
 endif
 
@@ -133,7 +133,6 @@ CFLAGS += -DUSE_LUA
 endif
 ifneq ($(CONFIG_MONGOOSESQL),)
 CFLAGS += -DUSE_LUA_SQLITE3
-LDLIBS += m
 endif
 ifneq ($(CONFIG_MONGOOSEIPV6),)
 CFLAGS += -DUSE_IPV6
