scripts: replace kbuild/kconfig files
The previous kbuild/kconfig infrastructure used by swupdate is paritally
broken (xconfig, gconfig) and several features are missing, e.g. passing
parameters through the environment with the env option or the make target
savedefconfig.

We are using a kbuild template based on the Linux kernel 4.2.0-rc1 [1].
The following patches will adapt swupdate to use this template for building.

[1]
https://github.com/joerg-krause/kbuild_skeleton

Signed-off-by: Jörg Krause <joerg.krause@embedded.rocks>

--- a/scripts/Makefile.clean
+++ b/scripts/Makefile.clean
@@ -14,7 +14,7 @@ clean := -f $(if $(KBUILD_SRC),$(srctree)/)scripts/Makefile.clean obj
 
 # The filename Kbuild has precedence over Makefile
 kbuild-dir := $(if $(filter /%,$(src)),$(src),$(srctree)/$(src))
--include $(if $(wildcard $(kbuild-dir)/Kbuild), $(kbuild-dir)/Kbuild, $(kbuild-dir)/Makefile)
+include $(if $(wildcard $(kbuild-dir)/Kbuild), $(kbuild-dir)/Kbuild, $(kbuild-dir)/Makefile)
 
 # Figure out what we need to build from the various variables
 # ==========================================================================
@@ -37,13 +37,15 @@ subdir-ymn      := $(sort $(subdir-ym) $(subdir-n) $(subdir-))
 
 subdir-ymn	:= $(addprefix $(obj)/,$(subdir-ymn))
 
-# build a list of files to remove, usually releative to the current
+# build a list of files to remove, usually relative to the current
 # directory
 
-__clean-files	:= $(extra-y) $(EXTRA_TARGETS) $(always) \
+__clean-files	:= $(extra-y) $(always)                  \
 		   $(targets) $(clean-files)             \
 		   $(host-progs)                         \
 		   $(hostprogs-y) $(hostprogs-m) $(hostprogs-)
+
+__clean-files   := $(filter-out $(no-clean-files), $(__clean-files))
 
 # as clean-files is given relative to the current directory, this adds
 # a $(obj) prefix, except for absolute paths
