Add include/generated to gitignore
The autoconf.h file will be generated into this directory.

Signed-off-by: Jörg Krause <joerg.krause@embedded.rocks>

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ examples/client/client
 *.depend*
 include/autoconf.h
 include/config/
+include/generated/
 doc/build
 scripts/basic/docproc
 scripts/basic/fixdep
