Kconfig: Add HAVE_LIBCONFIG
Allow passing through the environment if libconfig is available for the build
target.

Defaults to yes because we do not do any library checking for now.

Signed-off-by: Jörg Krause <joerg.krause@embedded.rocks>

--- a/parser/Config.in
+++ b/parser/Config.in
@@ -3,6 +3,7 @@ menu "Parser Features"
 config LIBCONFIG
 	bool "libconfig"
 	default y
+	depends on HAVE_LIBCONFIG
 	help
 	  Use libconfig to parse the configuration file.
 	  This is the default parser.
