--- a/Kconfig
+++ b/Kconfig
@@ -13,6 +13,10 @@ config HAVE_LUA
 	bool
 	option env="HAVE_LUA"
 
+config HAVE_LIBCONFIG
+	bool
+	option env="HAVE_LIBCONFIG"
+
 menu "Swupdate Settings"
 
 menu "General Configuration"
