Kconfig: Add HAVE_LIBCURL
Allow passing through the environment if libcurl is available for the build
target.

Defaults to yes because we do not do any library checking for now.

Signed-off-by: Jörg Krause <joerg.krause@embedded.rocks>

--- a/Kconfig
+++ b/Kconfig
@@ -17,6 +17,10 @@ config HAVE_LIBCONFIG
 	bool
 	option env="HAVE_LIBCONFIG"
 
+config HAVE_LIBCURL
+	bool
+	option env="HAVE_LIBCURL"
+
 menu "Swupdate Settings"
 
 menu "General Configuration"
@@ -184,6 +188,7 @@ endmenu
 config DOWNLOAD
 	bool "Enable image downloading"
 	default n
+	depends on HAVE_LIBCURL
 	help
 	  Enable update from image URL using libcurl. Files are downloaded
 	  completely before installation begins.
